--- a/src/chrome/os/linux/toolbarbutton.css
+++ b/src/chrome/os/linux/toolbarbutton.css
@@ -21,6 +21,7 @@ toolbarbutton {
 
 toolbarbutton:-moz-lwtheme {
   text-shadow: none;
+  color: inherit;
 }
 
 .toolbarbutton-icon[label]:not([label=""]),
