-moz-margin -> margin-inline

--- a/src/chrome/browser/browser.css
+++ b/src/chrome/browser/browser.css
@@ -1445,7 +1445,7 @@ richlistitem[type~="action"][actiontype="switchtab"] > .ac-url-box > .ac-action-
 
 /* Tab sound indicator */
 .tab-icon-sound {
-  -moz-margin-start: 4px;
+  margin-inline-start: 4px;
   width: 16px;
   height: 16px;
   padding: 0;
