Fix download status icon width
Fixes #6

--- a/src/chrome/browser/statusbar/overlay.css
+++ b/src/chrome/browser/statusbar/overlay.css
@@ -90,6 +90,11 @@ toolbar:not([brighttext]) #status4evar-download-button #status4evar-download-ico
 	background: -moz-image-rect(var(--toolbarbutton-inverted-image), 0, 108, 18, 90) center no-repeat;
 }
 
+#status4evar-download-button #status4evar-download-icon {
+  min-width: 18px;
+  min-height: 18px;
+}
+
 #status4evar-download-button[attention] #status4evar-download-icon {
 	background-image: url("chrome://browser/skin/downloads/download-glow.png");
 }
