--- a/src/chrome/global/global.css
+++ b/src/chrome/global/global.css
@@ -132,7 +132,7 @@ statusbarpanel:not(.statusbar-resizerpanel):-moz-lwtheme {
 sidebarheader {
   height: 25px;
   background-color: rgb(43,43,43);
-  -moz-appearance: toolbox;
+  -moz-appearance: none;
   border-bottom: 1px solid rgb(50,50,50);
   border-top: 1px solid rgb(50,50,50);
 }
